# MicroCVM

./: CMakeLists.txt  README.md
docs/: instruction_set.md
include/microcvm/: cpu.h  disk.h
include/microcvm/assemble/: assemble.h
src/: main.c
src/implementation/: cpu.c  disk.c
src/implementation/assemble/: assemble.c
tests/: CMakeLists.txt  mov.c
tests/assembly/: test.mca
tests/disks/: disk1.img
